--- a/04_visualizacion_interpretacion.ipynb
+++ b/04_visualizacion_interpretacion.ipynb
@@ -10,20 +10,20 @@
     "## Parte 4: Visualización e Interpretación de Resultados\n",
     "\n",
     "### Introducción\n",
-    "Este notebook final presenta visualizaciones avanzadas y una interpretación contextualizada de los cambios detectados en las imágenes Sentinel-1 SAR. El objetivo es facilitar la comunicación de resultados y proporcionar _insights_ para la toma de decisiones en monitoreo agrícola [1].\n",
+    "Este notebook final presenta visualizaciones avanzadas y una interpretación contextualizada de los cambios detectados en las imágenes Sentinel-1 SAR. El objetivo es facilitar la comunicación de resultados y proporcionar insights para la toma de decisiones en monitoreo agrícola [1].\n",
     "\n",
-    "### Contexto agrícola regional\n",
+    "### Contexto Agrícola Regional\n",
     "La región de la Orinoquía colombiana (departamentos de Meta y Casanare) es una zona de gran importancia agrícola, caracterizada por [2]:\n",
     "\n",
-    "- Cultivos principales: arroz, maíz, palma de aceite, soya y pastos para ganadería.\n",
-    "- Estacionalidad: dos períodos de lluvia (abril–mayo y octubre–noviembre).\n",
-    "- Ciclos agrícolas: cultivos de ciclo corto (3–4 meses) y permanentes.\n",
-    "- Sistemas de riego: predominio de riego por inundación en arroz.\n",
+    "- Cultivos principales: arroz, maíz, palma de aceite, soya y pastos para ganadería\n",
+    "- Estacionalidad: dos períodos de lluvia (abril-mayo y octubre-noviembre)\n",
+    "- Ciclos agrícolas: cultivos de ciclo corto (3-4 meses) y permanentes\n",
+    "- Sistemas de riego: predominancia de riego por inundación en arroz\n",
     "\n",
-    "### Interpretación de cambios SAR en contexto agrícola\n",
-    "Las variaciones de backscatter en Sentinel-1 pueden indicar [3], [4]:\n",
+    "### Interpretación de Cambios SAR en Contexto Agrícola\n",
+    "Las variaciones de backscatter en Sentinel-1 pueden indicar [3][4]:\n",
     "\n",
-    "| Cambio observado | Interpretación agrícola posible |\n",
+    "| Cambio Observado | Interpretación Agrícola Posible |\n",
     "| --- | --- |\n",
     "| Aumento VV y VH | Crecimiento vegetativo, emergencia de cultivos |\n",
     "| Aumento VV, estable VH | Inundación de campos (preparación arroz) |\n",
