docs: Enriquecer análisis agrícola con referencia al DANE
Se actualiza el análisis del ciclo agrícola para incluir una mención a la Encuesta Nacional de Arroz Mecanizado (ENAM) del DANE como fuente oficial que respalda las conclusiones.

Se añade la cita correspondiente a la ENAM en el archivo de referencias bibliográficas.

--- a/references.bib
+++ b/references.bib
@@ -180,6 +180,14 @@
   note={In Spanish}
 }
 
+@misc{dane2024enam,
+  author = "{Departamento Administrativo Nacional de Estadística (DANE)}",
+  title = "{Encuesta Nacional de Arroz Mecanizado (ENAM) - Históricos}",
+  year = "{2024}",
+  howpublished = "\url{https://www.dane.gov.co/index.php/estadisticas-por-tema/agropecuario/encuesta-de-arroz-mecanizado/encuesta-nacional-de-arroz-mecanizado-enam-historicos}",
+  note = "Consultado en 2025-09-30"
+}
+
 % Additional SAR crop monitoring papers
 
 @inproceedings{mandal2019rice,
