--- a/02_preprocesamiento_sentinel1.ipynb
+++ b/02_preprocesamiento_sentinel1.ipynb
@@ -76,38 +76,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Cargar datos del notebook anterior\n",
-    "municipios_seleccionados = gpd.read_file(\"data/municipios_seleccionados.gpkg\", layer=\"municipios\")\n",
-    "\n",
-    "with open('data/parametros.json', 'r') as f:\n",
-    "    parametros = json.load(f)\n",
-    "\n",
-    "print(f\"Municipios cargados: {len(municipios_seleccionados)}\")\n",
-    "print(f\"Período: {parametros['fecha_inicio']} a {parametros['fecha_fin']}\")\n",
-    "print(f\"Área total: {parametros['area_km2']:.2f} km²\")"
-   ]
+   "source": "# Cargar parámetros del notebook anterior\nwith open('data/parametros.json', 'r') as f:\n    parametros = json.load(f)\n\n# Cargar municipios desde Earth Engine (no desde GPKG)\nmunicipios_col = ee.FeatureCollection(parametros['ee_asset'])\nmunicipios_seleccionados = municipios_col.filter(\n    ee.Filter.inList('MPIO_CCDGO', parametros['codigos_municipios'])\n)\n\n# Crear AOI\naoi = municipios_seleccionados.geometry()\n\nprint(f\"✓ Datos cargados desde Earth Engine\")\nprint(f\"  Municipios: {municipios_seleccionados.size().getInfo()}\")\nprint(f\"  Período: {parametros['fecha_inicio']} a {parametros['fecha_fin']}\")\nprint(f\"  Asset EE: {parametros['ee_asset']}\")"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Recrear AOI de Earth Engine\n",
-    "def gdf_to_ee_geometry(gdf):\n",
-    "    \"\"\"Convierte un GeoDataFrame a una geometría de Earth Engine\"\"\"\n",
-    "    geom_union = gdf.geometry.unary_union\n",
-    "    if geom_union.geom_type == 'Polygon':\n",
-    "        coords = [list(geom_union.exterior.coords)]\n",
-    "        return ee.Geometry.Polygon(coords)\n",
-    "    elif geom_union.geom_type == 'MultiPolygon':\n",
-    "        coords = [list(poly.exterior.coords) for poly in geom_union.geoms]\n",
-    "        return ee.Geometry.MultiPolygon(coords)\n",
-    "\n",
-    "aoi = gdf_to_ee_geometry(municipios_seleccionados)\n",
-    "print(\"AOI recreada en Earth Engine\")"
-   ]
+   "source": "# El AOI ya está en formato Earth Engine - no requiere conversión\nprint(f\"✓ AOI creado desde FeatureCollection: {parametros['ee_asset']}\")\nprint(f\"  Tipo: {type(aoi)}\")"
   },
   {
    "cell_type": "markdown",
@@ -421,59 +397,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Crear mapa para visualización\n",
-    "Map = geemap.Map(\n",
-    "    center=[parametros['centroide_lat'], parametros['centroide_lon']], \n",
-    "    zoom=9\n",
-    ")\n",
-    "\n",
-    "# Agregar límites de municipios\n",
-    "Map.add_gdf(municipios_seleccionados, layer_name=\"Municipios\")\n",
-    "\n",
-    "# Parámetros de visualización para SAR\n",
-    "vis_params_vv = {\n",
-    "    'min': -25,\n",
-    "    'max': 0,\n",
-    "    'palette': ['blue', 'white', 'green']\n",
-    "}\n",
-    "\n",
-    "vis_params_vh = {\n",
-    "    'min': -30,\n",
-    "    'max': -5,\n",
-    "    'palette': ['purple', 'white', 'yellow']\n",
-    "}\n",
-    "\n",
-    "# Agregar composición más reciente\n",
-    "last_composite = ee.Image(s1_monthly.sort('system:time_start', False).first())\n",
-    "\n",
-    "Map.addLayer(\n",
-    "    last_composite.select('VV_filtered').clip(aoi),\n",
-    "    vis_params_vv,\n",
-    "    'VV - Última composición',\n",
-    "    opacity=0.8\n",
-    ")\n",
-    "\n",
-    "Map.addLayer(\n",
-    "    last_composite.select('VH_filtered').clip(aoi),\n",
-    "    vis_params_vh,\n",
-    "    'VH - Última composición',\n",
-    "    opacity=0.8,\n",
-    "    shown=False\n",
-    ")\n",
-    "\n",
-    "# Composición RGB falso color (VV, VH, VV/VH)\n",
-    "rgb_composite = last_composite.select(['VV_filtered', 'VH_filtered', 'ratio_filtered'])\n",
-    "Map.addLayer(\n",
-    "    rgb_composite.clip(aoi),\n",
-    "    {'min': [-25, -30, -5], 'max': [0, -5, 5]},\n",
-    "    'RGB Falso Color',\n",
-    "    opacity=0.8,\n",
-    "    shown=False\n",
-    ")\n",
-    "\n",
-    "Map"
-   ]
+   "source": "# Crear mapa para visualización\nMap = geemap.Map(\n    center=[parametros['centroide_lat'], parametros['centroide_lon']], \n    zoom=9\n)\n\n# Agregar límites de municipios desde Earth Engine\nMap.addLayer(municipios_seleccionados, {'color': 'black'}, 'Límites Municipales', True, 0.8)\n\n# Crear máscara de municipios para visualización\nmunicipios_mask = ee.Image.constant(1).clip(municipios_seleccionados.geometry())\n\n# Parámetros de visualización para SAR\nvis_params_vv = {\n    'min': -25,\n    'max': 0,\n    'palette': ['blue', 'white', 'green']\n}\n\nvis_params_vh = {\n    'min': -30,\n    'max': -5,\n    'palette': ['purple', 'white', 'yellow']\n}\n\n# Agregar composición más reciente\nlast_composite = ee.Image(s1_monthly.sort('system:time_start', False).first())\n\n# Aplicar máscara para mostrar solo dentro de municipios\nvv_masked = last_composite.select('VV_filtered').updateMask(municipios_mask)\nvh_masked = last_composite.select('VH_filtered').updateMask(municipios_mask)\n\nMap.addLayer(\n    vv_masked,\n    vis_params_vv,\n    'VV - Última composición (solo municipios)',\n    opacity=0.8\n)\n\nMap.addLayer(\n    vh_masked,\n    vis_params_vh,\n    'VH - Última composición (solo municipios)',\n    opacity=0.8,\n    shown=False\n)\n\n# Composición RGB falso color (VV, VH, VV/VH)\nrgb_composite = last_composite.select(['VV_filtered', 'VH_filtered', 'ratio_filtered']).updateMask(municipios_mask)\nMap.addLayer(\n    rgb_composite,\n    {'min': [-25, -30, -5], 'max': [0, -5, 5]},\n    'RGB Falso Color (solo municipios)',\n    opacity=0.8,\n    shown=False\n)\n\nMap"
   },
   {
    "cell_type": "markdown",
@@ -485,69 +409,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c3915eaa",
+   "metadata": {},
+   "source": [
+    "Los promedios departamentales pueden contrastarse con la superficie sembrada reportada por ENAM 2025-I: Meta aporta 59,145 ha (14.16 %) y Casanare 216,847 ha (51.93 %) del total nacional [7]. Estas cifras ayudan a validar que las señales de cambio se concentran en los territorios con mayor peso arrocero."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Extraer estadísticas de backscatter por municipio\n",
-    "def extract_stats_by_municipality(image, feature):\n",
-    "    \"\"\"Extrae estadísticas de una imagen para un municipio\"\"\"\n",
-    "    stats = image.reduceRegion(\n",
-    "        reducer=ee.Reducer.mean().combine(\n",
-    "            reducer2=ee.Reducer.stdDev(),\n",
-    "            sharedInputs=True\n",
-    "        ),\n",
-    "        geometry=feature.geometry(),\n",
-    "        scale=10,\n",
-    "        maxPixels=1e9\n",
-    "    )\n",
-    "    \n",
-    "    return ee.Feature(None, {\n",
-    "        'municipio': feature.get('municipio'),\n",
-    "        'departamento': feature.get('departamento'),\n",
-    "        'VV_mean': stats.get('VV_filtered_mean'),\n",
-    "        'VV_std': stats.get('VV_filtered_stdDev'),\n",
-    "        'VH_mean': stats.get('VH_filtered_mean'),\n",
-    "        'VH_std': stats.get('VH_filtered_stdDev'),\n",
-    "        'month': image.get('month')\n",
-    "    })\n",
-    "\n",
-    "# Convertir municipios a FeatureCollection\n",
-    "def gdf_to_ee_fc(gdf):\n",
-    "    features = []\n",
-    "    for idx, row in gdf.iterrows():\n",
-    "        geom = row.geometry\n",
-    "        if geom.geom_type == 'Polygon':\n",
-    "            coords = [list(geom.exterior.coords)]\n",
-    "            ee_geom = ee.Geometry.Polygon(coords)\n",
-    "        else:\n",
-    "            coords = [list(poly.exterior.coords) for poly in geom.geoms]\n",
-    "            ee_geom = ee.Geometry.MultiPolygon(coords)\n",
-    "        \n",
-    "        features.append(ee.Feature(ee_geom, {\n",
-    "            'municipio': row['mpio_cnmbr'],\n",
-    "            'departamento': row['dpto_cnmbr']\n",
-    "        }))\n",
-    "    return ee.FeatureCollection(features)\n",
-    "\n",
-    "municipios_fc = gdf_to_ee_fc(municipios_seleccionados)\n",
-    "\n",
-    "print(\"Extrayendo estadísticas por municipio...\")\n",
-    "print(\"(Este proceso puede tomar varios minutos)\")\n",
-    "\n",
-    "# Extraer para la última composición como ejemplo\n",
-    "stats_last_month = municipios_fc.map(\n",
-    "    lambda feat: extract_stats_by_municipality(last_composite, feat)\n",
-    ")\n",
-    "\n",
-    "# Convertir a DataFrame\n",
-    "stats_data = stats_last_month.getInfo()['features']\n",
-    "stats_df = pd.DataFrame([f['properties'] for f in stats_data])\n",
-    "\n",
-    "print(\"\\nEstadísticas de backscatter por municipio (última composición):\")\n",
-    "print(stats_df.to_string(index=False))"
-   ]
+   "source": "# Extraer estadísticas de backscatter por municipio\ndef extract_stats_by_municipality(image, feature):\n    \"\"\"Extrae estadísticas de una imagen para un municipio\"\"\"\n    stats = image.reduceRegion(\n        reducer=ee.Reducer.mean().combine(\n            reducer2=ee.Reducer.stdDev(),\n            sharedInputs=True\n        ),\n        geometry=feature.geometry(),\n        scale=10,\n        maxPixels=1e9\n    )\n    \n    return ee.Feature(None, {\n        'municipio': feature.get('MPIO_CNMBR'),\n        'departamento': feature.get('DPTO_CNMBR'),\n        'codigo': feature.get('MPIO_CCDGO'),\n        'VV_mean': stats.get('VV_filtered_mean'),\n        'VV_std': stats.get('VV_filtered_stdDev'),\n        'VH_mean': stats.get('VH_filtered_mean'),\n        'VH_std': stats.get('VH_filtered_stdDev'),\n        'month': image.get('month')\n    })\n\nprint(\"Extrayendo estadísticas por municipio...\")\nprint(\"(Este proceso puede tomar varios minutos)\")\n\n# municipios_seleccionados ya es una FeatureCollection de Earth Engine\n# Extraer para la última composición como ejemplo\nstats_last_month = municipios_seleccionados.map(\n    lambda feat: extract_stats_by_municipality(last_composite, feat)\n)\n\n# Convertir a DataFrame\nstats_data = stats_last_month.getInfo()['features']\nstats_df = pd.DataFrame([f['properties'] for f in stats_data])\n\nprint(\"\\n✓ Estadísticas de backscatter por municipio (última composición):\")\nprint(stats_df.to_string(index=False))"
   },
   {
    "cell_type": "markdown",
@@ -591,9 +465,12 @@
    "source": [
     "## Resumen\n",
     "\n",
-    "Este notebook prepara la serie de Sentinel-1 con filtros de órbita y polarización, convierte el backscatter a dB, atenúa el speckle y genera composiciones mensuales. También produce estadísticas municipales que se usarán como punto de comparación en la detección de cambios.\n",
+    "- Colección Sentinel-1 filtrada por órbita, polarización y rango temporal.\n",
+    "- Backscatter convertido a dB y enriquecido con el índice VV/VH.\n",
+    "- Filtro de speckle aplicado y composiciones mensuales generadas.\n",
+    "- Estadísticas municipales exportadas como base para la detección de cambios y contextualizadas con ENAM 2025-I [7].\n",
     "\n",
-    "**Próximo notebook:** `03_deteccion_cambios.ipynb` aplica métodos estadísticos para marcar áreas en transformación."
+    "**Próximo notebook:** `03_deteccion_cambios.ipynb` aplica métodos estadísticos para marcar áreas en transformación.\n"
    ]
   },
   {
@@ -612,7 +489,9 @@
     "\n",
     "[5] Google Earth Engine Developers, “Detecting Changes in Sentinel-1 Imagery, Part 2,” Google Developers, Mountain View, CA, USA, 2024. Disponible en: https://developers.google.com/earth-engine/tutorials/community/detecting-changes-in-sentinel-1-imagery-pt-2\n",
     "\n",
-    "[6] A. Nelson et al., “Towards an Operational SAR-Based Rice Monitoring System in Asia,” Remote Sensing, vol. 6, no. 11, pp. 10773–10812, 2014, doi: 10.3390/rs61110773."
+    "[6] A. Nelson et al., “Towards an Operational SAR-Based Rice Monitoring System in Asia,” Remote Sensing, vol. 6, no. 11, pp. 10773–10812, 2014, doi: 10.3390/rs61110773.\n",
+    "\n",
+    "[7] Departamento Administrativo Nacional de Estadística (DANE), “Encuesta Nacional de Arroz Mecanizado (ENAM). Anexos estadísticos I semestre 2025,” Bogotá, Colombia, ago. 2025. Disponible en: anex-ENAM-Isem2025.xlsx.\n"
    ]
   }
  ],
