--- a/references.bib
+++ b/references.bib
@@ -260,3 +260,12 @@
   doi={10.1080/01431161.2011.572094},
   url={https://doi.org/10.1080/01431161.2011.572094}
 }
+
+@misc{dane2025enam,
+  title={Encuesta Nacional de Arroz Mecanizado (ENAM). Anexos estadísticos I semestre 2025},
+  author={{Departamento Administrativo Nacional de Estadística}},
+  year={2025},
+  howpublished={Dataset},
+  note={Bogotá, Colombia},
+  url={anex-ENAM-Isem2025.xlsx}
+}
