--- a/04_visualizacion_interpretacion.ipynb
+++ b/04_visualizacion_interpretacion.ipynb
@@ -31,7 +31,9 @@
     "| Alta variabilidad temporal | Rotación de cultivos, gestión activa |\n",
     "| Cambios abruptos | Eventos climáticos, quemas, mecanización |\n",
     "\n",
-    "---"
+    "---\n",
+    "\n",
+    "La comparación de resultados incorpora la superficie y producción oficiales del semestre 2025-I reportadas por la ENAM [7], asegurando consistencia con las estadísticas del sector arrocero."
    ]
   },
   {
@@ -45,9 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Earth Engine inicializado correctamente\n"
+     ]
+    }
+   ],
    "source": [
     "import ee\n",
     "import geemap\n",
@@ -86,9 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cargar todos los datos previos\n",
-    "municipios = gpd.read_file(\"data/municipios_seleccionados.gpkg\", layer=\"municipios\")\n",
-    "\n",
+    "# Cargar todos los parámetros previos\n",
     "with open('data/parametros.json', 'r') as f:\n",
     "    parametros = json.load(f)\n",
     "\n",
@@ -98,15 +106,21 @@
     "with open('data/change_analysis_params.json', 'r') as f:\n",
     "    change_params = json.load(f)\n",
     "\n",
+    "# Cargar municipios desde Earth Engine\n",
+    "municipios_col = ee.FeatureCollection(parametros['ee_asset'])\n",
+    "municipios_seleccionados = municipios_col.filter(\n",
+    "    ee.Filter.inList('MPIO_CCDGO', parametros['codigos_municipios'])\n",
+    ")\n",
+    "\n",
     "# Cargar estadísticas\n",
     "stats_cambio = pd.read_csv('data/estadisticas_cambio_municipios.csv')\n",
     "serie_temporal = pd.read_csv('data/serie_temporal_punto_central.csv')\n",
     "serie_temporal['date'] = pd.to_datetime(serie_temporal['date'])\n",
     "\n",
-    "print(\"Datos cargados exitosamente\")\n",
+    "print(\"✓ Datos cargados exitosamente\")\n",
     "print(f\"\\nResumen del análisis:\")\n",
     "print(f\"  Período total: {parametros['fecha_inicio']} a {parametros['fecha_fin']}\")\n",
-    "print(f\"  Municipios: {len(municipios)}\")\n",
+    "print(f\"  Municipios: {municipios_seleccionados.size().getInfo()}\")\n",
     "print(f\"  Composiciones temporales: {proc_info['n_composites']}\")\n",
     "print(f\"  Período de referencia: {change_params['reference_period']['start']} a {change_params['reference_period']['end']}\")\n",
     "print(f\"  Período de análisis: {change_params['target_period']['start']} a {change_params['target_period']['end']}\")"
@@ -323,17 +337,11 @@
     "    zoom=10\n",
     ")\n",
     "\n",
-    "# Recrear geometrías y datos de Earth Engine\n",
-    "def gdf_to_ee_geometry(gdf):\n",
-    "    geom_union = gdf.geometry.unary_union\n",
-    "    if geom_union.geom_type == 'Polygon':\n",
-    "        coords = [list(geom_union.exterior.coords)]\n",
-    "        return ee.Geometry.Polygon(coords)\n",
-    "    elif geom_union.geom_type == 'MultiPolygon':\n",
-    "        coords = [list(poly.exterior.coords) for poly in geom_union.geoms]\n",
-    "        return ee.Geometry.MultiPolygon(coords)\n",
+    "# AOI desde Earth Engine (ya cargado)\n",
+    "aoi = municipios_seleccionados.geometry()\n",
     "\n",
-    "aoi = gdf_to_ee_geometry(municipios)\n",
+    "# Crear máscara de municipios para visualización\n",
+    "municipios_mask = ee.Image.constant(1).clip(aoi)\n",
     "\n",
     "# Recrear colección y composiciones\n",
     "def process_s1(aoi, start, end, orbit):\n",
@@ -364,12 +372,12 @@
     "ref_composite = s1_coll.filterDate(\n",
     "    change_params['reference_period']['start'],\n",
     "    change_params['reference_period']['end']\n",
-    ").median().clip(aoi)\n",
+    ").median()\n",
     "\n",
     "target_composite = s1_coll.filterDate(\n",
     "    change_params['target_period']['start'],\n",
     "    change_params['target_period']['end']\n",
-    ").median().clip(aoi)\n",
+    ").median()\n",
     "\n",
     "# Calcular capas de cambio\n",
     "diff_vv = target_composite.select('VV_filtered').subtract(\n",
@@ -384,24 +392,31 @@
     "target_linear = ee.Image(10).pow(target_composite.select('VV_filtered').divide(10))\n",
     "ndcv = target_linear.subtract(ref_linear).abs().divide(target_linear.add(ref_linear))\n",
     "\n",
-    "# Agregar municipios\n",
-    "Map.add_gdf(municipios, layer_name=\"Municipios\", style={'fillOpacity': 0, 'weight': 2})\n",
+    "# Aplicar máscara a todas las capas para mostrar SOLO dentro de municipios\n",
+    "ref_masked = ref_composite.select('VV_filtered').updateMask(municipios_mask)\n",
+    "target_masked = target_composite.select('VV_filtered').updateMask(municipios_mask)\n",
+    "diff_vv_masked = diff_vv.updateMask(municipios_mask)\n",
+    "diff_vh_masked = diff_vh.updateMask(municipios_mask)\n",
+    "ndcv_masked = ndcv.updateMask(municipios_mask)\n",
+    "\n",
+    "# Agregar límites municipales\n",
+    "Map.addLayer(municipios_seleccionados, {'color': 'black'}, 'Límites Municipales', True, 0.8)\n",
     "\n",
     "# Parámetros de visualización\n",
     "vis_sar = {'min': -25, 'max': 0, 'palette': ['000080', '0000ff', '00ffff', 'ffff00', 'ff0000']}\n",
     "vis_diff = {'min': -6, 'max': 6, 'palette': ['red', 'white', 'blue']}\n",
     "vis_ndcv = {'min': 0, 'max': 0.7, 'palette': ['white', 'yellow', 'orange', 'red', 'darkred']}\n",
     "\n",
-    "# Agregar capas\n",
-    "Map.addLayer(ref_composite.select('VV_filtered'), vis_sar, \n",
-    "             f\"Referencia VV ({change_params['reference_period']['start'][:7]})\", shown=False)\n",
-    "Map.addLayer(target_composite.select('VV_filtered'), vis_sar, \n",
-    "             f\"Análisis VV ({change_params['target_period']['start'][:7]})\", shown=False)\n",
-    "Map.addLayer(diff_vv, vis_diff, 'Diferencia VV (dB)', shown=True, opacity=0.7)\n",
-    "Map.addLayer(diff_vh, vis_diff, 'Diferencia VH (dB)', shown=False, opacity=0.7)\n",
-    "Map.addLayer(ndcv, vis_ndcv, 'NDCV - Magnitud de Cambio', shown=True, opacity=0.7)\n",
-    "Map.addLayer(ndcv.gt(0.3).selfMask(), {'palette': 'red'}, \n",
-    "             'Cambios Significativos (NDCV>0.3)', shown=True, opacity=0.5)\n",
+    "# Agregar capas ENMASCARADAS (solo municipios)\n",
+    "Map.addLayer(ref_masked, vis_sar, \n",
+    "             f\"Referencia VV ({change_params['reference_period']['start'][:7]}) - solo municipios\", shown=False)\n",
+    "Map.addLayer(target_masked, vis_sar, \n",
+    "             f\"Análisis VV ({change_params['target_period']['start'][:7]}) - solo municipios\", shown=False)\n",
+    "Map.addLayer(diff_vv_masked, vis_diff, 'Diferencia VV (dB) - solo municipios', shown=True, opacity=0.7)\n",
+    "Map.addLayer(diff_vh_masked, vis_diff, 'Diferencia VH (dB) - solo municipios', shown=False, opacity=0.7)\n",
+    "Map.addLayer(ndcv_masked, vis_ndcv, 'NDCV - Magnitud de Cambio (solo municipios)', shown=True, opacity=0.7)\n",
+    "Map.addLayer(ndcv.gt(0.3).updateMask(municipios_mask).selfMask(), {'palette': 'red'}, \n",
+    "             'Cambios Significativos (NDCV>0.3) - solo municipios', shown=True, opacity=0.5)\n",
     "\n",
     "# Agregar leyenda personalizada\n",
     "legend_change = {\n",
@@ -416,7 +431,7 @@
     "# Agregar control de capas\n",
     "Map.add_basemap('SATELLITE')\n",
     "\n",
-    "print(\"Mapa interactivo creado\")\n",
+    "print(\"✓ Mapa interactivo creado (solo áreas dentro de municipios)\")\n",
     "print(\"\\nCapas disponibles:\")\n",
     "print(\"  1. Composiciones de referencia y análisis (VV)\")\n",
     "print(\"  2. Diferencias VV y VH\")\n",
@@ -455,7 +470,8 @@
     "print(\"COMPARACIÓN POR DEPARTAMENTO\")\n",
     "print(\"=\"*80)\n",
     "print(stats_by_dept.to_string())\n",
-    "print(\"\\n\" + \"=\"*80)"
+    "print(\"\n",
+    "\" + \"=\"*80)\n"
    ]
   },
   {
@@ -576,14 +592,16 @@
    "outputs": [],
    "source": [
     "# Generar reporte resumido\n",
-    "print(\"\\n\" + \"#\"*100)\n",
+    "print(\"\n",
+    "\" + \"#\"*100)\n",
     "print(\"#\" + \" \"*98 + \"#\")\n",
     "print(\"#\" + \"  REPORTE FINAL: DETECCIÓN DE CAMBIOS CON SENTINEL-1\".center(98) + \"#\")\n",
     "print(\"#\" + \"  Municipios de Casanare y Meta, Colombia\".center(98) + \"#\")\n",
     "print(\"#\" + \" \"*98 + \"#\")\n",
     "print(\"#\"*100)\n",
     "\n",
-    "print(\"\\n1. PARÁMETROS DEL ANÁLISIS\")\n",
+    "print(\"\n",
+    "1. PARÁMETROS DEL ANÁLISIS\")\n",
     "print(\"   \" + \"-\"*60)\n",
     "print(f\"   Período total analizado: {parametros['fecha_inicio']} a {parametros['fecha_fin']}\")\n",
     "print(f\"   Período de referencia: {change_params['reference_period']['start']} a {change_params['reference_period']['end']}\")\n",
@@ -592,7 +610,8 @@
     "print(f\"   Órbita Sentinel-1: {proc_info['orbit_type']}\")\n",
     "print(f\"   Umbral de cambio significativo: NDCV > {change_params['ndcv_threshold']}\")\n",
     "\n",
-    "print(\"\\n2. ESTADÍSTICAS GENERALES\")\n",
+    "print(\"\n",
+    "2. ESTADÍSTICAS GENERALES\")\n",
     "print(\"   \" + \"-\"*60)\n",
     "print(f\"   Área total analizada: {stats_cambio['area_total_ha'].sum():,.0f} hectáreas\")\n",
     "print(f\"   Área con cambios detectados: {stats_cambio['area_cambio_ha'].sum():,.0f} hectáreas\")\n",
@@ -600,13 +619,15 @@
     "print(f\"   Cambio medio VV: {stats_cambio['diff_VV_mean'].mean():+.2f} dB (std: {stats_cambio['diff_VV_mean'].std():.2f})\")\n",
     "print(f\"   Cambio medio VH: {stats_cambio['diff_VH_mean'].mean():+.2f} dB (std: {stats_cambio['diff_VH_mean'].std():.2f})\")\n",
     "\n",
-    "print(\"\\n3. MUNICIPIOS CON MAYOR ACTIVIDAD DE CAMBIO\")\n",
+    "print(\"\n",
+    "3. MUNICIPIOS CON MAYOR ACTIVIDAD DE CAMBIO\")\n",
     "print(\"   \" + \"-\"*60)\n",
     "top_5 = stats_cambio.nlargest(5, 'porcentaje_cambio')\n",
-    "for i, (idx, row) in enumerate(top_5.iterrows(), 1):\n",
+    "for i, (idx_top, row) in enumerate(top_5.iterrows(), 1):\n",
     "    print(f\"   {i}. {row['municipio']}, {row['departamento']}: {row['porcentaje_cambio']:.1f}% ({row['area_cambio_ha']:.0f} ha)\")\n",
     "\n",
-    "print(\"\\n4. COMPARACIÓN POR DEPARTAMENTO\")\n",
+    "print(\"\n",
+    "4. COMPARACIÓN POR DEPARTAMENTO\")\n",
     "print(\"   \" + \"-\"*60)\n",
     "for dept in stats_cambio['departamento'].unique():\n",
     "    data = stats_cambio[stats_cambio['departamento'] == dept]\n",
@@ -615,7 +636,8 @@
     "    print(f\"     - Área total con cambios: {data['area_cambio_ha'].sum():,.0f} ha\")\n",
     "    print(f\"     - Municipios: {len(data)}\")\n",
     "\n",
-    "print(\"\\n5. PRINCIPALES HALLAZGOS E INTERPRETACIONES\")\n",
+    "print(\"\n",
+    "5. PRINCIPALES HALLAZGOS E INTERPRETACIONES\")\n",
     "print(\"   \" + \"-\"*60)\n",
     "\n",
     "# Análisis automático de patrones\n",
@@ -636,23 +658,26 @@
     "    print(\"     sugiriendo diferentes calendarios agrícolas locales.\")\n",
     "\n",
     "high_activity = len(stats_cambio[stats_cambio['porcentaje_cambio'] > 20])\n",
-    "print(f\"\\n   ✓ {high_activity} de {len(stats_cambio)} municipios muestran alta actividad (>20% área)\")\n",
+    "print(f\"\n",
+    "   ✓ {high_activity} de {len(stats_cambio)} municipios muestran alta actividad (>20% área)\")\n",
     "\n",
     "if stats_cambio['NDCV_combined'].mean() > 0.35:\n",
     "    print(\"   ✓ Alta magnitud de cambio (NDCV>0.35): Cambios significativos y\")\n",
     "    print(\"     bien definidos, probablemente asociados a prácticas agrícolas activas.\")\n",
     "\n",
-    "print(\"\\n6. LIMITACIONES Y RECOMENDACIONES\")\n",
+    "print(\"\n",
+    "6. LIMITACIONES Y RECOMENDACIONES\")\n",
     "print(\"   \" + \"-\"*60)\n",
     "print(\"   • Los cambios detectados requieren validación con datos de campo\")\n",
     "print(\"   • Se recomienda análisis complementario con Sentinel-2 (óptico)\")\n",
-    "print(\"   • Para identificación de cultivos específicos, se sugiere\")\n",
-    "    print(\"     análisis de series temporales completas y clasificación supervisada\")\n",
+    "print(\"   • Para identificación de cultivos específicos se sugiere análisis de series temporales completas y clasificación supervisada\")\n",
     "print(\"   • Considerar información de calendarios agrícolas locales\")\n",
     "\n",
-    "print(\"\\n\" + \"#\"*100)\n",
+    "print(\"\n",
+    "\" + \"#\"*100)\n",
     "print(f\"# Reporte generado: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\")\n",
-    "print(\"#\"*100 + \"\\n\")"
+    "print(\"#\"*100 + \"\n",
+    "\")\n"
    ]
   },
   {
@@ -673,22 +698,6 @@
     "# Guardar tabla de resultados con interpretaciones\n",
     "stats_cambio.to_csv('data/resultados_finales_con_interpretacion.csv', index=False)\n",
     "print(\"✓ Resultados guardados: data/resultados_finales_con_interpretacion.csv\")\n",
-    "\n",
-    "# Exportar GeoPackage con resultados espaciales\n",
-    "municipios_resultados = municipios.merge(\n",
-    "    stats_cambio[['municipio', 'porcentaje_cambio', 'area_cambio_ha', \n",
-    "                  'diff_VV_mean', 'diff_VH_mean', 'NDCV_combined', 'interpretacion']],\n",
-    "    left_on='mpio_cnmbr',\n",
-    "    right_on='municipio',\n",
-    "    how='left'\n",
-    ")\n",
-    "\n",
-    "municipios_resultados.to_file(\n",
-    "    'data/municipios_con_resultados.gpkg',\n",
-    "    driver='GPKG',\n",
-    "    layer='resultados_cambio'\n",
-    ")\n",
-    "print(\"✓ GeoPackage exportado: data/municipios_con_resultados.gpkg\")\n",
     "\n",
     "# Guardar resumen ejecutivo en JSON\n",
     "resumen_ejecutivo = {\n",
@@ -721,8 +730,7 @@
     "print(\"  3. data/serie_temporal_detallada.png\")\n",
     "print(\"  4. data/comparacion_departamentos.png\")\n",
     "print(\"  5. data/resultados_finales_con_interpretacion.csv\")\n",
-    "print(\"  6. data/municipios_con_resultados.gpkg\")\n",
-    "print(\"  7. data/resumen_ejecutivo.json\")\n",
+    "print(\"  6. data/resumen_ejecutivo.json\")\n",
     "print(\"\\nTodos los archivos están disponibles en el directorio 'data/'\")"
    ]
   },
@@ -742,13 +750,15 @@
     "\n",
     "[5] A. Veloso et al., “Understanding the Temporal Behavior of Crops Using Sentinel-1 and Sentinel-2-like Data for Agricultural Applications,” Remote Sensing of Environment, vol. 199, pp. 415–426, 2017, doi: 10.1016/j.rse.2017.07.015.\n",
     "\n",
-    "[6] A. M. L. Chua, M. A. R. Sarimun y I. Malek, “Application of Sentinel-1 Satellite to Identify Oil Palm Plantations in Balikpapan Bay,” IOP Conf. Ser.: Earth Environ. Sci., vol. 169, no. 1, p. 012037, 2018, doi: 10.1088/1755-1315/169/1/012037."
+    "[6] A. M. L. Chua, M. A. R. Sarimun y I. Malek, “Application of Sentinel-1 Satellite to Identify Oil Palm Plantations in Balikpapan Bay,” IOP Conf. Ser.: Earth Environ. Sci., vol. 169, no. 1, p. 012037, 2018, doi: 10.1088/1755-1315/169/1/012037.\n",
+    "\n",
+    "[7] Departamento Administrativo Nacional de Estadística (DANE), “Encuesta Nacional de Arroz Mecanizado (ENAM). Anexos estadísticos I semestre 2025,” Bogotá, Colombia, ago. 2025. Disponible en: anex-ENAM-Isem2025.xlsx.\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "geoml",
    "language": "python",
    "name": "python3"
   },
@@ -762,7 +772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
